# Victus-AI-2.0

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_hotkey_ui_temp.py  run_ui_temp.py  spotify_auth.py  wrangler.toml
.github/workflows/: ci.yml
adapters/llm/: provider.py
adapters/runtime/: launcher.py
api/: worker.js
api/migrations/: 0001_init.sql
apps/local/: launcher.py  main.py
core/: config.py  updater.py
docs/: DEMO_PHASE3.md  DEMO_PHASE4.md  DEMO_PHASE4_HOTKEY_TEMP.md  DEMO_PHASE4_TEMP.md  DEV_GUIDE.md  PHASE_STATUS.md  POLICY.md  QUALITY_REPORT.md  TESTING.md  TEST_REPORT.md  architecture.md  operations.md  spotify_setup.md  ui.md
dotenv/: __init__.py
scripts/: quality_report.py  try_orchestrate.py
tests/: conftest.py  test_audit.py  test_executor.py  test_phase1_local_scaffold.py  test_phase2_filesandbox.py  test_phase2_finance.py  test_phase2_memories.py  test_phase3_camera.py  test_policy.py  test_quality_report_imports.py  test_weekly_report.py  test_weekly_report_determinism.py  test_weekly_report_suggestions.py
victus/: __init__.py  app.py  audit.py  executor.py  policy.py  schemas.py
victus_local/: README.md  __init__.py  admin_auth.py  app_aliases.py  app_aliases.seed.json  app_resolver.py  credentials.py  credentials.template.py  dialogue_state.py  local_plugin.py  media_router.py  memory_store_v2.py  policy_store.py  requirements.txt  runtime_policy.json  server.py  task_runner.py  turn_handler.py  victus_adapter.py
(+107 files in other folders)
