[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "venv",
  ".venv",
  "build",
  "dist",
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".pytest_cache",
  "__pycache__",
  "htmlcov",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E402", "F401", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
